--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-mongo_url=mongodb+srv://omkundu:omkundu@cluster0.nkpfjn5.mongodb.net/omdbs?retryWrites=true&w=majority
+mongo_url=mongodb+srv://omkundu:omkundu@cluster0.cucz0ky.mongodb.net/omdbs?retryWrites=true&w=majority
 PORT=7000   
+
